<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:srcCompat="@drawable/_0" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/delete"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/negative"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/button41"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/back"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button36"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/multiplication"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:gravity="center"
            android:text="@string/_2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button26"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_3"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button34"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/plus"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_4"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button28"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_5"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button29"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_6"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button35"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/minus"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button30"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_7"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_8"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/_9"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button37"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/division"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button33"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="2.1"
            android:backgroundTint="@color/redly"
            android:text="@string/_0"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/button39"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/dot"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/redly"
            android:text="@string/equals"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>


</LinearLayout>
