<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/i4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_0" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:onClick="onMyButtonClick"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:onClick="onMyButtonClick"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5">

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/delete"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/negative"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/back"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonMulti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/multiplication"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/_2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_3"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/plus"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3">


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_4"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_5"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_6"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/minus"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_7"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_8"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/_9"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/division"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>


    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="2.1"
            android:backgroundTint="@color/blue"
            android:text="@string/_0"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/dot"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/equals"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>